--- a/genweb/organs/browser/stylesheets/genweb_organs.css
+++ b/genweb/organs/browser/stylesheets/genweb_organs.css
@@ -57,3 +57,7 @@ ul#tabs.nav.nav-tabs {
     padding-bottom: 8px;
     padding-top: 8px;
 }
+
+a.collapsed .icon-chevron-down{
+    background-position: -456px -72px;
+}
