changed literal add massive

--- a/genweb/organs/browser/stylesheets/genweb_organs.css
+++ b/genweb/organs/browser/stylesheets/genweb_organs.css
@@ -73,7 +73,8 @@ table th {
 }
 
 
+/* CSS  modal afegir punts massivament */
 #form-widgets-message {
     width: 530px;
-    height: 265px;
+    height: 190px;
  }
