order elements in table

--- a/genweb/organs/browser/stylesheets/genweb_organs.css
+++ b/genweb/organs/browser/stylesheets/genweb_organs.css
@@ -111,5 +111,32 @@ input#form-widgets-agreement {width: 98%;}
 
 #contentOrgan {margin-bottom: 20px;}
 
-
 /* editable */
+#sortable {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width:auto;
+}
+
+#sortable li {
+    margin: 0 3px 3px 3px;
+    padding: 0.4em;
+    padding-left: 1.5em;
+    font-size: 14px;
+    height: 18px;
+}
+
+#sortable li span {
+    position: absolute;
+    margin-left: -1.3em;
+}
+
+#sortable .ui-state-highlight {
+    height: 1.5em;
+    line-height: 1.2em;
+    background: #ccc;
+}
+
+
+
