--- a/genweb/organs/browser/stylesheets/genweb_organs.css
+++ b/genweb/organs/browser/stylesheets/genweb_organs.css
@@ -154,6 +154,7 @@ input#form-widgets-agreement {width: 98%;}
 
 .ui-state-grey:hover {
     background-color: #f0f0f0;
+    cursor: move;
 }
 
 .filesinTable{
@@ -168,4 +169,32 @@ input#form-widgets-agreement {width: 98%;}
 }
 
 
+.llistaAfegir {
+    border-top: 1px solid #777777;
+    margin-top:10px;
+    color: #333;
+    font-family: Arial,Helvetica,sans-serif;
+    font-size: 11px;
+    line-height: 18px;
+    text-align:right;
+}
 
+.llistaAfegir a {
+    padding: 1px 4px 2px;
+}
+
+.llistaAfegir a:hover {
+    background-color: #D4D4D4;
+    color: black;
+    padding: 1px 4px 2px;
+}
+
+
+.editTitle:hover {
+    cursor: text;
+}
+
+span.label.nomarginLeft  {
+    margin-left: 10px!important;
+    font-size:10px;
+}
