--- a/genweb/organs/browser/stylesheets/genweb_organs.css
+++ b/genweb/organs/browser/stylesheets/genweb_organs.css
@@ -195,6 +195,9 @@ input#form-widgets-agreement {width: 98%;}
 }
 
 span.label.nomarginLeft  {
-    margin-left: 10px!important;
+    margin-left: 10px !important;
+    margin-right: 5px;
+    position: initial !important;
+    float: right;
     font-size:10px;
 }
