--- a/genweb/organs/browser/stylesheets/jqueryui-editable.css
+++ b/genweb/organs/browser/stylesheets/jqueryui-editable.css
@@ -57,7 +57,7 @@
 }
 
 .editableform-loading {
-    background: url('../img/loading.gif') center center no-repeat;
+    background: url('loading.gif') center center no-repeat;
     height: 25px;
     width: auto;
     min-width: 25px;
@@ -125,7 +125,7 @@
 
 /* IOS-style clear button for text inputs */
 .editable-clear-x {
-   background: url('../img/clear.png') center center no-repeat;
+   background: url('clear.png') center center no-repeat;
    display: block;
    width: 13px;
    height: 13px;
