--- a/genweb/organs/browser/stylesheets/genweb_organs.css
+++ b/genweb/organs/browser/stylesheets/genweb_organs.css
@@ -141,10 +141,20 @@ span.proposalNumber {
     margin-left: -10px;
 }
 
-span.proposalNumberSubpunt{
+.DADES ul, .DADES ol {
+    margin: 8px 0;
+    /* margin: 0 0 9px 25px; */
+}
+
+/*span.proposalNumberSubpunt{
     color: #007BC0;
     margin-left: -10px;
     
+}*/
+
+span.proposalNumberSubpunt {
+    color: #007BC0;
+    margin-left: 20px;
 }
 
 #sortable .ui-state-highlight {
@@ -235,6 +245,7 @@ span.label.nomarginLeft  {
     color: black;
     font-size:16px;
     font-weight: bold;
+    padding: 5px!important;
     font-color: black;
 }
 
@@ -297,3 +308,10 @@ label.label.label-default {
 }
 
 label.label.label-default{padding: 2px 4px!important;}
+
+.btn-group {
+    margin-top: 5px;
+    margin-right: 5px;
+}
+
+.subpuntTitle ul li, .subpuntTitle ol li{ margin-left:20px;  }  
