added collapse function

--- a/genweb/organs/browser/stylesheets/genweb_organs.css
+++ b/genweb/organs/browser/stylesheets/genweb_organs.css
@@ -453,3 +453,8 @@ li.filesinTable {
     margin: 0;
     padding: 5px 1em 5px 1.8em;
 }
+
+.listFiles {
+    list-style: none;
+    padding-top:10px;
+}
