--- a/genweb/organs/browser/stylesheets/genweb_organs.css
+++ b/genweb/organs/browser/stylesheets/genweb_organs.css
@@ -146,10 +146,10 @@ input#form-widgets-agreement {width: 98%;}
 
 span.proposalNumber {
     color: #007bc0;
+    float: left;
     font-size: 20px;
     margin-left: -10px;
     margin-right: 8px;
-    padding: 0;
 }
 
 .DADES ul, .DADES ol {
@@ -278,11 +278,8 @@ span.label.nomarginLeft  {
 .subpuntTitle {
     color: black;
     font-size: 16px;
-    font-weight: bold;
-    padding-bottom: 5px !important;
+    margin-top: 10px;
     padding-left: 25px;
-    padding-right: 5px !important;
-    padding-top: 5px !important;
 }
 
 #modalSession {
@@ -373,6 +370,7 @@ li.filesinTable {
     background-color: transparent;
     border: 1px dotted #ccc;
     border-radius: 5px;
+    padding-left: 14px;
 }    
 
 .subpuntTitle:hover:before {
@@ -415,9 +413,7 @@ li.filesinTable {
 }
 
 .label.dropdown-toggle {
-    background-color: #ccc !important;
-    color: white !important;
-    text-shadow: none !important;
+
 }
 .label.dropdown-toggle:hover {
     background: #007bc0 none repeat scroll 0 0 !important;
@@ -427,10 +423,10 @@ li.filesinTable {
     vertical-align: middle;
 }
 
-.DADES .edit.label{ background-color: #007bc0; color: }
+.DADES .edit.label:hover { background-color: #007bc0; color: }
 .DADES .edit.label a{ color:white!important; }
 #estats > a, #menu1 a {
-    background: transparent none repeat scroll 0 0 !important;
+    background: transparent none repeat scroll 0 0 ;
     color: white;
 }
 .btn-info, .link-parent {
@@ -451,9 +447,15 @@ li.filesinTable {
     border-radius: 0;
     font-size: 13px;
     margin: 0;
-    padding: 5px 1em 5px 1.8em;
+    padding: 0;
 }
-
+#sortable .dropdown-menu li a:hover {
+background-color: transparent;
+    background-image: none;
+    background-repeat: repeat-x;
+    color: black;
+    text-decoration: none;
+}
 .listFiles {
     list-style: none;
     padding-top:10px;
