--- a/genweb/organs/browser/stylesheets/genweb_organs.css
+++ b/genweb/organs/browser/stylesheets/genweb_organs.css
@@ -198,13 +198,14 @@ span.proposalNumberSubpunt {
 
 .ui-state-grey:hover {
     background: #f9f9f9 none repeat scroll 0 0;
-    cursor: grabbing;
+    cursor: move;
     position: relative;
 }    
 
 .ui-state-grey:hover:before {
-    content: "\f07d";
+    /*content: "\f07d";*/
     font-family: FontAwesome;
+    cursor: move;
     color: #007BC0;
    position: absolute;
    font-size: 15px;
@@ -356,7 +357,8 @@ a.remove{background-color: #e8003d!important}
 
 
 .subpuntTitle:hover:before {
-     content: "\f07d";
+    /* content: "\f07d";*/
+    cursor: move;
     font-family: FontAwesome;
     color: #ccc;
    font-size: 13px;
@@ -367,8 +369,9 @@ a.remove{background-color: #e8003d!important}
 }
 
 .ui-state-grey:hover:before {
-    content: "\f07d";
+    /*content: "\f07d";*/
     font-family: FontAwesome;
+    cursor: move;
     color: #ccc;
    position: absolute;
    font-size: 14px;
