--- a/genweb/organs/browser/stylesheets/genweb_organs.css
+++ b/genweb/organs/browser/stylesheets/genweb_organs.css
@@ -23,7 +23,7 @@ ul#tabs.nav.nav-tabs {
     min-width: 85px;
     padding: 8px 20px;
     text-align: center;
-    outline: medium none;    
+    outline: medium none;
 }
 
 #contentOrgan #tabs li.active a,
@@ -200,7 +200,7 @@ span.proposalNumberSubpunt {
     background: #f9f9f9 none repeat scroll 0 0;
     cursor: move;
     position: relative;
-}    
+}
 
 .ui-state-grey:hover:before {
     /*content: "\f07d";*/
@@ -262,7 +262,7 @@ span.label.nomarginLeft  {
     font-size:16px;
     font-weight: bold;
     font-color: black;
-    margin-bottom: 15px;    
+    margin-bottom: 15px;
 }
 .subpuntTitle {
     font-size: 16px;
@@ -271,9 +271,25 @@ span.label.nomarginLeft  {
 }
 
 #modalSession {
-    width: 800px;
+    width: 85%;
+    right: 30%;
+    left: 30% !important;
+    height: 82%;
 }
 
+div.modal-body.presentation {
+    max-height: 100% !important;
+}
+
+div.modal-header.presentation {
+    font-size: 16px;
+    font-weight: bold;
+    font-color: black;
+}
+
+div#modalSession.modal.fade.modalSession.in {
+    top: 35%;
+}
 
 #modalSessionView {
     list-style-type: none;
@@ -394,7 +410,7 @@ a.remove{background-color: #e8003d!important}
     margin: 1px !important;
     padding: 2px 6px 3px;
     text-shadow: none;
-    vertical-align: top;    
+    vertical-align: top;
 }
 .DADES .remove:hover {
     background: #d14836 none repeat scroll 0 0;
@@ -478,35 +494,16 @@ background-color: transparent;
     border-bottom: 0px solid #ececec;
 }
 
-/*
-Full screen Modal 
-*/
-.fullscreen-modal .modal-dialog {
-  margin: 0;
-  margin-right: auto;
-  margin-left: auto;
-  width: 100%;
-}
-@media (min-width: 768px) {
-  .fullscreen-modal .modal-dialog {
-    width: 750px;
-  }
-}
-@media (min-width: 992px) {
-  .fullscreen-modal .modal-dialog {
-    width: 970px;
-  }
-}
-@media (min-width: 1200px) {
-  .fullscreen-modal .modal-dialog {
-     width: 1170px;
-  }
-}
-
-
 .caixaPunts {
     float: right;
     background-color: #eeeeee;
     padding: 15px 15px;
     list-style: none;
 }
+
+
+.presentationModal {
+    font-size: 15px;
+    color: #557C95;
+    font-weight: bold;
+    }
