--- a/genweb/organs/browser/stylesheets/genweb_organs.css
+++ b/genweb/organs/browser/stylesheets/genweb_organs.css
@@ -543,3 +543,8 @@ background-color: transparent;
 .portaltype-genweb-organs-document a#plone-contentmenu-multilingual.dropdown-toggle,
 .portaltype-genweb-organs-acta a#plone-contentmenu-multilingual.dropdown-toggle
  {display: none;}
+
+.popover {
+    z-index: 2060 !important;
+
+}
