up intern file name

--- a/genweb/organs/browser/stylesheets/genweb_organs.css
+++ b/genweb/organs/browser/stylesheets/genweb_organs.css
@@ -372,7 +372,7 @@ a.remove{background-color: #e8003d!important}
 }
 
 span.editable-container.editable-inline  input[type="text"] {
-    width: 330px;
+    /*width: 330px;*/
 }
 
 .subpuntTitle:hover:before {
