--- a/genweb/organs/browser/stylesheets/genweb_organs.css
+++ b/genweb/organs/browser/stylesheets/genweb_organs.css
@@ -549,3 +549,25 @@ background-color: transparent;
     z-index: 2060 !important;
 
 }
+
+.bannerOrgans {padding-top: 20px;}
+.bannerTitle {
+    left: 10%;
+    padding-bottom: 30px;
+    right: 20%;
+    top: 128px;
+    text-align: left;
+    position: absolute;
+    padding-top: 15px;
+    font-size: 20px;
+    bottom: 20px;
+    z-index: 10;
+    color: black;
+    text-shadow: 0 1px 2px rgba(0,0,0,.6);
+    background-color: white;
+    height: 0px;
+    margin-left: 35px;
+    padding-left: 10px;
+    opacity: 0.50;
+    width: 130px;
+}
