--- a/genweb/organs/browser/stylesheets/genweb_organs.css
+++ b/genweb/organs/browser/stylesheets/genweb_organs.css
@@ -562,12 +562,12 @@ background-color: transparent;
     font-size: 20px;
     bottom: 20px;
     z-index: 10;
-    color: black;
+    color: white;
     text-shadow: 0 1px 2px rgba(0,0,0,.6);
-    background-color: white;
+    /*background-color: white;*/
     height: 0px;
     margin-left: 35px;
     padding-left: 10px;
-    opacity: 0.50;
-    width: 130px;
+    /*opacity: 0.50;*/
+    /*width: 130px;*/
 }
