--- a/genweb/organs/browser/stylesheets/genweb_organs.css
+++ b/genweb/organs/browser/stylesheets/genweb_organs.css
@@ -572,21 +572,24 @@ background-color: transparent;
 
 }
 
-.bannerOrgans {padding-top: 20px;}
+.bannerOrgans {padding-top: 20px;position: relative;}
 .bannerTitle {
-    padding-bottom: 30px;
-    top: 128px;
-    text-align: left;
-    position: absolute;
-    padding-top: 15px;
-    font-size: 20px;
     bottom: 20px;
-    z-index: 10;
     color: white;
-    text-shadow: 0 1px 2px rgba(0,0,0,.6);
-    height: 0px;
-    margin-left: 0px;
-    padding-left: 0px;
+    font-size: 22px;
+    font-weight: 600;
+    height: 0;
+    left: 20px;
+    margin-left: 0;
+    padding-bottom: 30px;
+    padding-left: 0;
+    padding-top: 15px;
+    position: absolute;
+    text-align: left;
+    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
+    text-transform: uppercase;
+    top: 30px;
+    z-index: 10;
 }
 
 div.formControls {
